Resolves: tdf#99963 line wrap very long checkbox content

Change-Id: I11ab52b8c6600d5d479ac3d4d2cd78d1957d8676
(cherry picked from commit ea3f74ba0a9d291f26a79f2568d59f1a030d0585)